--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     tty: true 
     working_dir: /repo
     volumes:
-       - /Users/givip/JoyLabs/git_tests:/repo
+       - /Users/givi/path_to_repo:/repo
     environment:
       VERBOSE: false
       DRY_RUN: true
@@ -15,47 +15,10 @@ services:
       GITHUB_WORKSPACE: /repo
       GITHUB_OUTPUT: /github_output_log
 
-     #develop config
-      # RELEASE_BRANCHES: master
-      # DEFAULT_BRANCH: master
-      # WITH_V: true
-      # DEFAULT_BUMP: none
-      # BUILD_NUMBER: true
-      # INITIAL_BUILD_NUMDER: 0
-      # TAG_CONTEXT: repo
-      # PRERELEASE: true
-      # PRERELEASE_SUFFIX: dev
-      # PRERELEASE_VERSION: false
-
-    #release config
-      # RELEASE_BRANCHES: master
-      # DEFAULT_BRANCH: master
-      # WITH_V: true
-      # DEFAULT_BUMP: none
-      # BUILD_NUMBER: true
-      # INITIAL_BUILD_NUMDER: 0
-      # TAG_CONTEXT: repo
-      # PRERELEASE: true
-      # PRERELEASE_SUFFIX: rc
-      # PRERELEASE_VERSION: true
-
-    #hotfix config
-      # RELEASE_BRANCHES: master
-      # DEFAULT_BRANCH: master
-      # WITH_V: true
-      # DEFAULT_BUMP: none
-      # BUILD_NUMBER: true
-      # INITIAL_BUILD_NUMDER: 0
-      # TAG_CONTEXT: repo
-      # PRERELEASE: true
-      # PRERELEASE_SUFFIX: hotfix
-      # PRERELEASE_VERSION: false
-
-    #master config
-      RELEASE_BRANCHES: master
-      DEFAULT_BRANCH: master
-      WITH_V: true
-      DEFAULT_BUMP: none
+      DEFAULT_BRANCH: develop
       BUILD_NUMBER: true
-      INITIAL_BUILD_NUMDER: 0
+      INITIAL_BUILD_NUMBER: 0
       TAG_CONTEXT: repo
+      PRERELEASE: true
+      PRERELEASE_SUFFIX: dev
+      PRERELEASE_VERSION: false
